--- a/Project 3 IAC/servers.yml
+++ b/Project 3 IAC/servers.yml
@@ -1,16 +1,15 @@
+Description: >
+    Wasupon Tangsakul
 Parameters:
   EnvironmentName:
+    Description: An environment name that will be prefixed to resource names
     Type: String
-    Description: EC2 Server environment name
-    
   InstanceImageId:
     Type: String
     Description: An Image ID for EC2 Instance
-
   InstanceType:
     Type: String
     Description: A type of EC2 Instance
-
 Resources:
   UdacityS3ReadOnlyEC2:
     Type: AWS::IAM::Role
@@ -40,32 +39,31 @@ Resources:
       Path: /
       Roles:
         - !Ref UdacityS3ReadOnlyEC2
-
+        
   LBSecGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Allow http to our load balancer
       VpcId:
         Fn::ImportValue:
-          !Sub ${EnvironmentName}-VPCID
+          !Sub "${EnvironmentName}-VPCID"
       SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
+      - IpProtocol: tcp
+        FromPort: 80
+        ToPort: 80
+        CidrIp: 0.0.0.0/0
       SecurityGroupEgress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0
-  
+      - IpProtocol: tcp
+        FromPort: 80
+        ToPort: 80
+        CidrIp: 0.0.0.0/0
   WebServerSecGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Web server security group
+      GroupDescription: Allow http to our hosts and SSH from local only
       VpcId:
         Fn::ImportValue:
-          !Sub ${EnvironmentName}-VPCID
+          !Sub "${EnvironmentName}-VPCID"
       SecurityGroupIngress:
       - IpProtocol: tcp
         FromPort: 80
@@ -80,7 +78,6 @@ Resources:
         FromPort: 0
         ToPort: 65535
         CidrIp: 0.0.0.0/0
-
   WebAppLaunchConfig:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
@@ -88,22 +85,22 @@ Resources:
         Fn::Base64: !Sub |
           #!/bin/bash
           apt-get update -y
+          apt-get install awscli -y
+          apt-get install unzip -y
           apt-get install apache2 -y
           systemctl start apache2.service
           cd /var/www/html
           aws s3 cp s3://udacity-demo-1/udacity.zip .
           unzip -o udacity.zip
-      ImageId: !Ref InstanceImageId
-      KeyName: VocareumKey2
+      ImageId: ami-0d1cd67c26f5fca19
       IamInstanceProfile: !Ref ProfileWithRolesForOurApp
       SecurityGroups:
-      - !Ref WebServerSecGroup
+      - Ref: WebServerSecGroup
       InstanceType: !Ref InstanceType
       BlockDeviceMappings:
       - DeviceName: "/dev/sdk"
         Ebs:
           VolumeSize: '10'
-
   WebAppGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
@@ -112,42 +109,40 @@ Resources:
           !Sub "${EnvironmentName}-PRIV-NETS"
       LaunchConfigurationName:
         Ref: WebAppLaunchConfig
-      MinSize: '3'
-      MaxSize: '5'
+      MinSize: '4'
+      MaxSize: '6'
       TargetGroupARNs:
       - Ref: WebAppTargetGroup
-
   WebAppLB:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       Subnets:
-      - Fn::ImportValue: !Sub ${EnvironmentName}-PUB1-SN
-      - Fn::ImportValue: !Sub ${EnvironmentName}-PUB2-SN
+      - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
+      - Fn::ImportValue: !Sub "${EnvironmentName}-PUB2-SN"
       SecurityGroups:
-      - !Ref LBSecGroup
-
+      - Ref: LBSecGroup
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
       DefaultActions:
       - Type: forward
-        TargetGroupArn: !Ref WebAppTargetGroup
-      LoadBalancerArn: !Ref WebAppLB
-      Port: 80
+        TargetGroupArn:
+          Ref: WebAppTargetGroup
+      LoadBalancerArn:
+        Ref: WebAppLB
+      Port: '80'
       Protocol: HTTP
-  
   ALBListenerRule:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-      - Type: forward
-        TargetGroupArn: !Ref WebAppTargetGroup
-      Conditions:
-      - Field: path-pattern
-        Values: [/]
-      ListenerArn: !Ref Listener
-      Priority: 1
-  
+      Type: AWS::ElasticLoadBalancingV2::ListenerRule
+      Properties:
+        Actions:
+        - Type: forward
+          TargetGroupArn: !Ref 'WebAppTargetGroup'
+        Conditions:
+        - Field: path-pattern
+          Values: [/]
+        ListenerArn: !Ref 'Listener'
+        Priority: 1
   WebAppTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
@@ -159,14 +154,13 @@ Resources:
       Port: 80
       Protocol: HTTP
       UnhealthyThresholdCount: 5
-      VpcId:
-        Fn::ImportValue: 
-          !Sub ${EnvironmentName}-VPCID
+      VpcId: 
+        Fn::ImportValue:
+          Fn::Sub: "${EnvironmentName}-VPCID"
 
 Outputs: 
   LBDNSName:
     Description: LoadBalancer DNS for public access
-    Value: 
-      Fn::GetAtt: WebAppLB.DNSName
+    Value: !Join ["", [ "http://", Fn::GetAtt: WebAppLB.DNSName]]
     Export:
       Name: !Sub ${EnvironmentName}-DNS
